--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Clumps Software Solution - Digital Marketing And Web Designing Company in Hyderabad	</title>
+  <title>Clumps Software Solution - Helping Businesses Streamline Operations & Drive Growth	</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="./assets/frontent_files/css/style.css">
   <link rel="stylesheet" href="./assets/frontent_files/css/responsive.css">
   <meta name="facebook-domain-verification" content="vwzm49g9i32cse471e4glupskftrj9" />
+  <meta name="keywords" content="digital transformation, cloud migration services, digital transformation services, cloud managed services, digital transformation consulting, digital transformation solutions, digital business transformation, digital transformation companies, isv partner, cloud modernization"
 </head>
 <body >
   <div class="body">
