--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,16 @@
   <link rel="stylesheet" href="./assets/frontent_files/css/responsive.css">
   <meta name="facebook-domain-verification" content="vwzm49g9i32cse471e4glupskftrj9" />
   <meta name="keywords" content="digital transformation, cloud migration services, digital transformation services, cloud managed services, digital transformation consulting, digital transformation solutions, digital business transformation, digital transformation companies, isv partner, cloud modernization"
-<!-- Google tag (gtag.js) --> 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGL36X9LCL"></script> 
-  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-TGL36X9LCL'); </script>
-    </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1HJSWZZVR8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1HJSWZZVR8');
+</script>
+</head>
 <body >
   <div class="body">
     <app-root></app-root>
