--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Clumps Software Solution - Helping Businesses Streamline Operations & Drive Growth	</title>
+  <title>Transforming Business Operations with Digitalization and Automation</title>
+  <meta name="description" content="Clumps Software Solution leads digital transformation, offering web & app development, social media management, and cloud migration services.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -19,7 +20,7 @@
   <link rel="stylesheet" href="./assets/frontent_files/css/style.css">
   <link rel="stylesheet" href="./assets/frontent_files/css/responsive.css">
   <meta name="facebook-domain-verification" content="vwzm49g9i32cse471e4glupskftrj9" />
-  <meta name="keywords" content="digital transformation, cloud migration services, digital transformation services, cloud managed services, digital transformation consulting, digital transformation solutions, digital business transformation, digital transformation companies, isv partner, cloud modernization"
+  <meta name="keywords" content="digital transformation, cloud migration services, digital transformation services, cloud managed services, digital transformation consulting, digital transformation solutions, digital business transformation, digital transformation companies, isv partner, cloud modernization" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1HJSWZZVR8"></script>
 <script>
@@ -29,6 +30,17 @@
 
   gtag('config', 'G-1HJSWZZVR8');
 </script>
+<!-- structured data -->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "clumps software soluation",
+    "url": "https://www.clumpssoftware.com/",
+    "logo": "https://www.clumpssoftware.com/assets/frontent_files/img/clumpssoftware.png"
+  }
+  </script>
+
 </head>
 <body >
   <div class="body">
